# InfraGPT-MCP

./: .gitignore  DEMO_PROMPTS.md  DOCUMENTATION_SUMMARY.md  README.md  check_claude_config.sh  claude_desktop_config.json  diagnose.sh  pyproject.toml  requirements.txt  setup.sh  test_client.py  test_mcp_stdio.py  test_server.sh
docs/: DEMO_QUICK_REFERENCE.txt  OLLAMA_SETUP.md  PRESENTATION.md  PROJECT_STATUS.md  README.md
docs/diagrams/: architecture.md
docs/getting-started/: QUICK_START.md
docs/reference/: ARCHITECTURE.md
docs/setup/: CLAUDE_DESKTOP_SETUP.md
infra_mcp/: __init__.py  infra_monitor.py  log_analyzer.py  mcp_types.py  server.py
testing/: TESTING.md  regression_test.py  regression_test_report.json
