[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-mcp"
version = "1.0.0"
description = "MCP server for infrastructure monitoring with AI-powered log analysis"
authors = [{name = "NerdMeetup Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-generativeai>=0.8.0",
    "psutil>=5.9.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
infra-mcp = "infra_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["infra_mcp*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

